# oura-helm-chart

./: .dockerignore  .gitignore  .kube-linter.yaml  .yamllint  CHANGELOG.md  Dockerfile  README.md  artifacthub-repo.yml  cr.yaml  index.html  index.yaml  oura-0.1.0.tgz  oura-0.1.1.tgz  oura-0.1.2.tgz  oura-0.1.2.tgz.prov  oura-0.2.0.tgz  oura-0.2.0.tgz.prov  oura-0.2.1.tgz  oura-0.2.1.tgz.prov  oura-0.2.10.tgz  oura-0.2.10.tgz.prov  oura-0.2.2.tgz  oura-0.2.2.tgz.prov  oura-0.2.3.tgz  oura-0.2.3.tgz.prov  oura-0.2.4.tgz  oura-0.2.4.tgz.prov  oura-0.2.5.tgz  oura-0.2.5.tgz.prov  oura-0.2.6.tgz  oura-0.2.6.tgz.prov  oura-0.2.7.tgz  oura-0.2.7.tgz.prov  oura-0.2.8.tgz  oura-0.2.8.tgz.prov  oura-0.2.9.tgz  oura-0.2.9.tgz.prov  pyproject.toml
.github/workflows/: ci.yml  release.yml  sync-pages.yml
charts/oura/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
charts/oura/files/: collector.py  dashboard-oura.json  db-bootstrap.sh  symptom_radar.py
charts/oura/templates/: NOTES.txt  _helpers.tpl  backfill-job.yaml  configmap.yaml  cronjob.yaml  dashboard-configmap.yaml  dashboard-datasource-secret.yaml  postgres-bootstrap-job.yaml  pvc.yaml  secrets.yaml  serviceaccount.yaml  validate.yaml
charts/oura/tests/: bootstrap_test.yaml  cronjob_test.yaml  (+4 more)
ci/: values-quickstart.yaml  values.yaml
pages/: index.html  public.key
scripts/: bump-chart-version.sh  generate-changelog.sh  sync-gh-pages.sh  versions.sh
src/oura_collector/: __init__.py  __main__.py  collector.py  schema.sql  symptom_radar.py
tests/: test_collector.py  test_symptom_radar.py
