[project]
name = "oura-collector"
version = "0.2.10"
description = "Sync Oura Ring API v2 data into PostgreSQL"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
dependencies = ["psycopg[binary]==3.3.4"]

[project.scripts]
oura-collector = "oura_collector.collector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.12"]

[tool.hatch.build.targets.wheel]
packages = ["src/oura_collector"]

[tool.hatch.build.targets.wheel.force-include]
"src/oura_collector/schema.sql" = "oura_collector/schema.sql"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["oura_collector"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
